--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/GameStart.GameStart
-EditorStartupMap=/Game/Maps/Lobby.Lobby
+EditorStartupMap=/Game/Maps/Arena.Arena
 TransitionMap=/Game/Maps/TransistionMap.TransistionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
